修改加密方式，更新kline添加